# CV-homework

./: .gitignore  Cargo.toml  README.md
hw1/: Cargo.toml
hw1/public/: index.html  package-lock.json  package.json  tsconfig.json
hw1/public/scripts/: index.js  index.ts
hw1/src/: basicMath.rs  lib.rs  rgb2grey.rs
src/: rgb2grey.rs
