[package]
name = "hw1"
version = "0.1.0"
authors = ["Karshilov <karshilov@foxmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cv = { git = "https://github.com/nebgnahz/cv-rs.git" }

[lib]
crate-type = ["cdylib", "lib"]